--- a/style.scss
+++ b/style.scss
@@ -325,9 +325,10 @@ a{
         }
       &.pc{
         @include btnBase(96px, 400px, 48px);
-        font-size: 32px;
+
         .sw-btn__inner{
           display: block;
+          font-size: 32px;
           &::before {
             content: "";
             width:64px;
@@ -416,7 +417,7 @@ a{
           .lp-mv__listItemHandcream{
             position: absolute;
             right: 20.8vw;
-            height: 70vh;          
+            height: ((760 / 1080) * 100vh);          
             top: calc(50% + 60px);
             transform: translateY(-50%);
           }
@@ -491,31 +492,147 @@ a{
     font-family: $yumincho;
     font-weight: bold;
     text-align: center;
+    padding: 80px;
+    box-sizing: border-box;
+    position: relative;  
+    &__inner{
+      &Head{
+        font-size: $xl;
+        text-align: center;
+        padding: 40px 50px;
+        position: relative;
+        max-width: 730px;
+        max-height: 316px;
+        margin: 0 auto;
+        z-index:1;
+        background: radial-gradient(#fff 66%, rgba(255,255,255,0.5) 70%,transparent 76%);
+      }
+      &Img{
+        &--hand{
+          display: block;
+          margin: 0 auto;
+          max-width: 750px;
+          width: 75vw;
+        }
+        &--sakura01{
+          max-width: 510px;
+          width: 26.56vw;
+          position: absolute;
+          left: 0;
+          top: 300px;
+        }
+        &--sakura02{
+          max-width: 516px;
+          width: 26.875vw;
+          position: absolute;
+          right: 0;
+          top: 300px;
+        }
+      }
+    }
   }
   &-catch{
     min-height: 100vh;
     background: $mainback;
-  }
+    font-family: $yumincho;
+    &__inner{
+      height: 100%;
+      display: flex;
+      min-height: 100vh;
+      &Text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: center;
+        width: 50%;
+        padding: 50px 0;
+        &Box{
+          max-width: 580px;
+          width: 62.5%;
+          &Head{
+            margin-bottom: 40px;
+          }
+          &Text{
+            font-size: $lm;
+            &:not(:last-child){
+              margin-bottom: 1em;
+            }
+            &Strong{
+              font-weight: bold;
 
+            }
+
+          }
+        }
+      }
+      &Img{
+        background: url(img/lp-catch__innerImg.jpg) no-repeat center / cover;
+        width: 50%;
+      }
+
+    }
+  }
   &-sales{
     min-height: 100vh;
     &__inner{
-      font-family: $meiryo;
-      &Head{
-        color: $mainh;
+      display: flex;
+      
+      min-height: 100vh;;
+      &Text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        min-height: 100vh;
+        &Box{
+          width: 520px;
+          &Head{
+            color: $mainh;
+            font-weight: bold;
+            margin-bottom: 20px;
+            font-size: $xl;
+          }
+          &Text{
+            font-family: $meiryo;
+            margin-bottom: 1em;
+          }
+
+        }
+      }
+      
+      &Ibox{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        min-height: 100vh;
+        &Img{
+          display: block;
+          height: calc((780 / 1080) * 100vh);
+
+        }
       }
     }
   }
   &-features{
     min-height: 100vh;
     background: $mainback;
+    &__inner{
+
+    }
   }
   &-voice{
     min-height: 100vh;
     background: $mainpaleback;
+    &__inner{
+
+    }
   }
   &-shop{
     min-height: 100vh;
     background: $mainback;
+    &__inner{
+
+    }
   }
 }
